--- a/docker/Dockerfile_full
+++ b/docker/Dockerfile_full
@@ -44,8 +44,7 @@ WORKDIR /build
 RUN python -m venv /opt/venv && \
   . /opt/venv/bin/activate && \
   pip install --no-cache-dir -U 'pip<20' && \
-  poetry install --extras full --no-dev --no-root --no-interaction && \
-  make install-mitie && \
+  poetry install --extras full --extras mitie --no-dev --no-root --no-interaction && \
   poetry build -f wheel -n && \
   pip install --no-deps dist/*.whl && \
   rm -rf dist *.egg-info
