--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,6 +155,7 @@ pytest-timeout = "^1.4.2"
 mypy = "^0.790"
 
 [tool.poetry.extras]
+mitie = [ "mitie",]
 spacy = [ "spacy",]
 jieba = [ "jieba",]
 transformers = [ "transformers",]
@@ -167,6 +168,11 @@ rasa = "rasa.__main__:main"
 [tool.poetry.dependencies.colorama]
 version = "^0.4.4"
 markers = "sys_platform == 'win32'"
+
+[tool.poetry.dependencies.mitie]
+git = "https://github.com/tmbo/MITIE.git"
+rev = "b143c6cb"
+optional = true
 
 [tool.poetry.dependencies.spacy]
 version = ">=2.1,<2.3"
